--- a/dot_config/sway/definitions.d/01-raja.conf
+++ b/dot_config/sway/definitions.d/01-raja.conf
@@ -1,4 +1,4 @@
 set $background /home/raja/Wallpapers/desenho 1.jpg
 set $apply_background swaymsg 'output * bg $background fill'
-set $term alacritty
+set $term wezterm
 
